Bug 1398038 - Add tests for extended easing syntax; r=hiro
MozReview-Commit-ID: 7LkaWCrVvYD

UltraBlame original commit: a34dce42b2e7451eeaf6c5c368bb396b9ca104f7

--- a/testing/web-platform/meta/web-animations/interfaces/Animatable/animate.html.ini
+++ b/testing/web-platform/meta/web-animations/interfaces/Animatable/animate.html.ini
@@ -240,6 +240,99 @@ Element
 animate
 (
 )
+accepts
+a
+property
+-
+indexed
+keyframe
+with
+an
+array
+of
+easings
+]
+expected
+:
+FAIL
+[
+Element
+.
+animate
+(
+)
+accepts
+a
+property
+-
+indexed
+keyframe
+with
+an
+array
+of
+easings
+that
+is
+too
+short
+]
+expected
+:
+FAIL
+[
+Element
+.
+animate
+(
+)
+accepts
+a
+property
+-
+indexed
+keyframe
+with
+an
+array
+of
+easings
+that
+is
+too
+long
+]
+expected
+:
+FAIL
+[
+Element
+.
+animate
+(
+)
+accepts
+a
+property
+-
+indexed
+keyframe
+with
+an
+empty
+array
+of
+easings
+]
+expected
+:
+FAIL
+[
+Element
+.
+animate
+(
+)
 does
 not
 accept
