--- a/testing/web-platform/meta/web-animations/interfaces/KeyframeEffect/constructor.html.ini
+++ b/testing/web-platform/meta/web-animations/interfaces/KeyframeEffect/constructor.html.ini
@@ -235,6 +235,188 @@ expected
 :
 FAIL
 [
+a
+KeyframeEffectReadOnly
+can
+be
+constructed
+with
+a
+property
+-
+indexed
+keyframe
+with
+an
+array
+of
+easings
+]
+expected
+:
+FAIL
+[
+a
+KeyframeEffectReadOnly
+constructed
+with
+a
+property
+-
+indexed
+keyframe
+with
+an
+array
+of
+easings
+roundtrips
+]
+expected
+:
+FAIL
+[
+a
+KeyframeEffectReadOnly
+can
+be
+constructed
+with
+a
+property
+-
+indexed
+keyframe
+with
+an
+array
+of
+easings
+that
+is
+too
+short
+]
+expected
+:
+FAIL
+[
+a
+KeyframeEffectReadOnly
+constructed
+with
+a
+property
+-
+indexed
+keyframe
+with
+an
+array
+of
+easings
+that
+is
+too
+short
+roundtrips
+]
+expected
+:
+FAIL
+[
+a
+KeyframeEffectReadOnly
+can
+be
+constructed
+with
+a
+property
+-
+indexed
+keyframe
+with
+an
+array
+of
+easings
+that
+is
+too
+long
+]
+expected
+:
+FAIL
+[
+a
+KeyframeEffectReadOnly
+constructed
+with
+a
+property
+-
+indexed
+keyframe
+with
+an
+array
+of
+easings
+that
+is
+too
+long
+roundtrips
+]
+expected
+:
+FAIL
+[
+a
+KeyframeEffectReadOnly
+can
+be
+constructed
+with
+a
+property
+-
+indexed
+keyframe
+with
+an
+empty
+array
+of
+easings
+]
+expected
+:
+FAIL
+[
+a
+KeyframeEffectReadOnly
+constructed
+with
+a
+property
+-
+indexed
+keyframe
+with
+an
+empty
+array
+of
+easings
+roundtrips
+]
+expected
+:
+FAIL
+[
 KeyframeEffectReadOnly
 constructor
 throws
