--- a/testing/web-platform/meta/web-animations/interfaces/KeyframeEffect/setKeyframes.html.ini
+++ b/testing/web-platform/meta/web-animations/interfaces/KeyframeEffect/setKeyframes.html.ini
@@ -226,6 +226,95 @@ expected
 :
 FAIL
 [
+Keyframes
+can
+be
+replaced
+with
+a
+property
+-
+indexed
+keyframe
+with
+an
+array
+of
+easings
+]
+expected
+:
+FAIL
+[
+Keyframes
+can
+be
+replaced
+with
+a
+property
+-
+indexed
+keyframe
+with
+an
+array
+of
+easings
+that
+is
+too
+short
+]
+expected
+:
+FAIL
+[
+Keyframes
+can
+be
+replaced
+with
+a
+property
+-
+indexed
+keyframe
+with
+an
+array
+of
+easings
+that
+is
+too
+long
+]
+expected
+:
+FAIL
+[
+Keyframes
+can
+be
+replaced
+with
+a
+property
+-
+indexed
+keyframe
+with
+an
+empty
+array
+of
+easings
+]
+expected
+:
+FAIL
+[
 KeyframeEffect
 constructor
 throws
