Bug 1410341 - add toolchains.json to .hgignore;r=jmaher
MozReview-Commit-ID: KoYfVYcH9Kg

UltraBlame original commit: 9bf2f58e17f2d4ea0fa52776e38ca0b74bcc9820

--- a/.hgignore
+++ b/.hgignore
@@ -838,6 +838,20 @@ mitmproxy
 mitmweb
 #
 Ignore
+toolchains
+.
+json
+created
+by
+tooltool
+.
+^
+toolchains
+\
+.
+json
+#
+Ignore
 files
 created
 when
