Bug 1397644 part 1 - Implement XUL tree pseudo style resolution for stylo. r=emilio
MozReview-Commit-ID: 5JqvLv3tt5m

UltraBlame original commit: 372b5056da250596d28542aac89f3e456b4732ed

--- a/layout/style/ServoBindings.toml
+++ b/layout/style/ServoBindings.toml
@@ -1165,6 +1165,12 @@ AnonymousCounterStyle
 mozilla
 :
 :
+AtomArray
+"
+"
+mozilla
+:
+:
 ComputedTiming
 "
 "
@@ -2840,6 +2846,12 @@ mozilla
 :
 :
 AnonymousCounterStyle
+"
+"
+mozilla
+:
+:
+AtomArray
 "
 "
 mozilla
