--- a/servo/.travis.yml
+++ b/servo/.travis.yml
@@ -74,6 +74,113 @@ sudo
 dist
 :
 trusty
+before_install
+:
+-
+sudo
+add
+-
+apt
+-
+repository
+ppa
+:
+ubuntu
+-
+toolchain
+-
+r
+/
+test
+-
+y
+-
+sudo
+add
+-
+apt
+-
+repository
+'
+deb
+http
+:
+/
+/
+apt
+.
+llvm
+.
+org
+/
+precise
+/
+llvm
+-
+toolchain
+-
+precise
+-
+3
+.
+9
+main
+'
+-
+y
+-
+sudo
+apt
+-
+get
+update
+-
+q
+-
+sudo
+apt
+-
+get
+install
+clang
+-
+3
+.
+9
+llvm
+-
+3
+.
+9
+llvm
+-
+3
+.
+9
+-
+runtime
+-
+y
+-
+export
+LLVM_CONFIG
+=
+/
+usr
+/
+lib
+/
+llvm
+-
+3
+.
+9
+/
+bin
+/
+llvm
+-
+config
 script
 :
 -
