servo: Merge #18942 - Bootstrap from more permanent URLs (from servo:static.rlo); r=jdm,mbrubeck
The `rust-lang-ci` S3 bucket is ephemeral. `static-rust-lang-org.s3.amazonaws.com` is not going away soon, but using `static.rust-lang.org` when possible keeps things working if it ever does.

https://internals.rust-lang.org/t/updates-on-rusts-ci-uploads/6062
https://internals.rust-lang.org/t/public-stable-rust-services/6072

We’ll still need to find a solution for "alt" rustc builds. In the meantime, this is a step.

Source-Repo: https://github.com/servo/servo
Source-Revision: 041bd626ace013f93fa7fe101c70f36543fc9b0d

UltraBlame original commit: 7f9a9050fee12f086226b5646d363768e899e3d0

--- a/servo/python/requirements.txt
+++ b/servo/python/requirements.txt
@@ -140,6 +140,52 @@ boto3
 4
 .
 4
+#
+Default
+root
+CAs
+on
+Windows
+CI
+do
+not
+trust
+CloudFront
+certificates
+#
+connecting
+to
+https
+:
+/
+/
+static
+.
+rust
+-
+lang
+.
+org
+would
+fail
+:
+#
+https
+:
+/
+/
+github
+.
+com
+/
+servo
+/
+servo
+/
+pull
+/
+18942
+certifi
 -
 e
 python
