Bug 1410250 - Stop keying entire 'mozharness' section by-test-platform, r=dustin
Many of the 'test' tasks key the entire 'mozharness' section by-test-platform.
This is bad because:

A) Configuration under 'mozharness' can't be shared across platforms
B) We can't use the 'job-defaults' simplification since merging is naive

Instead of keying the entire 'mozharness' section, this change keys only the
specific configuration that needs it.

MozReview-Commit-ID: EaPlOzsESQ3

UltraBlame original commit: 3829051139a87999d3c8a7713305d6df09ca2466

--- a/taskcluster/ci/test/mochitest.yml
+++ b/taskcluster/ci/test/mochitest.yml
@@ -1,3 +1,106 @@
+job
+-
+defaults
+:
+mozharness
+:
+no
+-
+read
+-
+buildbot
+-
+config
+:
+true
+script
+:
+by
+-
+test
+-
+platform
+:
+android
+.
+*
+:
+android_emulator_unittest
+.
+py
+default
+:
+desktop_unittest
+.
+py
+config
+:
+by
+-
+test
+-
+platform
+:
+android
+-
+4
+.
+2
+-
+x86
+/
+opt
+:
+-
+android
+/
+androidx86
+.
+py
+android
+.
+*
+:
+-
+android
+/
+androidarm_4_3
+.
+py
+linux
+.
+*
+:
+-
+unittests
+/
+linux_unittest
+.
+py
+-
+remove_executables
+.
+py
+macosx
+.
+*
+:
+-
+unittests
+/
+mac_unittest
+.
+py
+windows
+.
+*
+:
+-
+unittests
+/
+win_taskcluster_unittest
+.
+py
 mochitest
 :
 description
@@ -224,6 +327,15 @@ default
 default
 mozharness
 :
+mochitest
+-
+flavor
+:
+plain
+extra
+-
+options
+:
 by
 -
 test
@@ -233,37 +345,6 @@ platform
 android
 .
 *
-:
-mochitest
--
-flavor
-:
-plain
-script
-:
-android_emulator_unittest
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
--
-android
-/
-androidarm_4_3
-.
-py
-extra
--
-options
 :
 -
 -
@@ -275,29 +356,9 @@ suite
 mochitest
 default
 :
-mochitest
--
-flavor
-:
-plain
-script
-:
-desktop_unittest
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
+[
+]
 chunked
-:
-true
-config
 :
 by
 -
@@ -305,40 +366,14 @@ test
 -
 platform
 :
-windows
+android
 .
 *
 :
--
-unittests
-/
-win_taskcluster_unittest
-.
-py
-macosx
-.
-*
+false
+default
 :
--
-unittests
-/
-mac_unittest
-.
-py
-linux
-.
-*
-:
--
-unittests
-/
-linux_unittest
-.
-py
--
-remove_executables
-.
-py
+true
 mochitest
 -
 a11y
@@ -409,70 +444,11 @@ built
 projects
 mozharness
 :
-script
-:
-desktop_unittest
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-chunked
-:
-false
 mochitest
 -
 flavor
 :
 a11y
-config
-:
-by
--
-test
--
-platform
-:
-windows
-.
-*
-:
--
-unittests
-/
-win_taskcluster_unittest
-.
-py
-macosx
-.
-*
-:
--
-unittests
-/
-mac_unittest
-.
-py
-linux
-.
-*
-:
--
-unittests
-/
-linux_unittest
-.
-py
--
-remove_executables
-.
-py
 tier
 :
 by
@@ -695,65 +671,9 @@ mochitest
 flavor
 :
 browser
-script
-:
-desktop_unittest
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
 chunked
 :
 true
-config
-:
-by
--
-test
--
-platform
-:
-windows
-.
-*
-:
--
-unittests
-/
-win_taskcluster_unittest
-.
-py
-macosx
-.
-*
-:
--
-unittests
-/
-mac_unittest
-.
-py
-linux
-.
-*
-:
--
-unittests
-/
-linux_unittest
-.
-py
--
-remove_executables
-.
-py
 #
 Bug
 1281241
@@ -946,62 +866,6 @@ mochitest
 flavor
 :
 browser
-script
-:
-desktop_unittest
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
-by
--
-test
--
-platform
-:
-windows
-.
-*
-:
--
-unittests
-/
-win_taskcluster_unittest
-.
-py
-macosx
-.
-*
-:
--
-unittests
-/
-mac_unittest
-.
-py
-linux
-.
-*
-:
--
-unittests
-/
-linux_unittest
-.
-py
--
-remove_executables
-.
-py
 allow
 -
 software
@@ -1103,6 +967,31 @@ e10s
 false
 mozharness
 :
+mochitest
+-
+flavor
+:
+chrome
+config
+:
+by
+-
+test
+-
+platform
+:
+macosx
+.
+*
+:
+-
+remove_executables
+.
+py
+extra
+-
+options
+:
 by
 -
 test
@@ -1112,61 +1001,6 @@ platform
 android
 .
 *
-:
-mochitest
--
-flavor
-:
-chrome
-script
-:
-android_emulator_unittest
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
-by
--
-test
--
-platform
-:
-android
--
-4
-.
-2
--
-x86
-/
-opt
-:
--
-android
-/
-androidx86
-.
-py
-default
-:
--
-android
-/
-androidarm_4_3
-.
-py
-extra
--
-options
 :
 -
 -
@@ -1180,29 +1014,9 @@ mochitest
 chrome
 default
 :
-mochitest
--
-flavor
-:
-chrome
-script
-:
-desktop_unittest
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
+[
+]
 chunked
-:
-true
-config
 :
 by
 -
@@ -1210,44 +1024,14 @@ test
 -
 platform
 :
-windows
+android
 .
 *
 :
--
-unittests
-/
-win_taskcluster_unittest
-.
-py
-macosx
-.
-*
+false
+default
 :
--
-remove_executables
-.
-py
--
-unittests
-/
-mac_unittest
-.
-py
-linux
-.
-*
-:
--
-unittests
-/
-linux_unittest
-.
-py
--
-remove_executables
-.
-py
+true
 tier
 :
 by
@@ -1366,6 +1150,31 @@ default
 true
 mozharness
 :
+mochitest
+-
+flavor
+:
+plain
+config
+:
+by
+-
+test
+-
+platform
+:
+macosx
+.
+*
+:
+-
+remove_executables
+.
+py
+extra
+-
+options
+:
 by
 -
 test
@@ -1375,37 +1184,6 @@ platform
 android
 .
 *
-:
-mochitest
--
-flavor
-:
-plain
-script
-:
-android_emulator_unittest
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
--
-android
-/
-androidarm_4_3
-.
-py
-extra
--
-options
 :
 #
 note
@@ -1430,78 +1208,6 @@ plain
 -
 clipboard
 default
-:
-mochitest
--
-flavor
-:
-plain
-script
-:
-desktop_unittest
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-chunked
-:
-false
-config
-:
-by
--
-test
--
-platform
-:
-windows
-.
-*
-:
--
-unittests
-/
-win_taskcluster_unittest
-.
-py
-macosx
-.
-*
-:
--
-remove_executables
-.
-py
--
-unittests
-/
-mac_unittest
-.
-py
-linux
-.
-*
-:
--
-unittests
-/
-linux_unittest
-.
-py
--
-remove_executables
-.
-py
-extra
--
-options
 :
 -
 -
@@ -1645,65 +1351,9 @@ mochitest
 flavor
 :
 chrome
-script
-:
-desktop_unittest
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
 chunked
 :
 true
-config
-:
-by
--
-test
--
-platform
-:
-windows
-.
-*
-:
--
-unittests
-/
-win_taskcluster_unittest
-.
-py
-macosx
-.
-*
-:
--
-unittests
-/
-mac_unittest
-.
-py
-linux
-.
-*
-:
--
-unittests
-/
-linux_unittest
-.
-py
--
-remove_executables
-.
-py
 instance
 -
 size
@@ -1836,6 +1486,15 @@ default
 true
 mozharness
 :
+mochitest
+-
+flavor
+:
+plain
+extra
+-
+options
+:
 by
 -
 test
@@ -1845,37 +1504,6 @@ platform
 android
 .
 *
-:
-mochitest
--
-flavor
-:
-plain
-script
-:
-android_emulator_unittest
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
--
-android
-/
-androidarm_4_3
-.
-py
-extra
--
-options
 :
 #
 note
@@ -1900,74 +1528,6 @@ plain
 -
 gpu
 default
-:
-mochitest
--
-flavor
-:
-plain
-script
-:
-desktop_unittest
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-chunked
-:
-false
-config
-:
-by
--
-test
--
-platform
-:
-windows
-.
-*
-:
--
-unittests
-/
-win_taskcluster_unittest
-.
-py
-macosx
-.
-*
-:
--
-unittests
-/
-mac_unittest
-.
-py
-linux
-.
-*
-:
--
-unittests
-/
-linux_unittest
-.
-py
--
-remove_executables
-.
-py
-extra
--
-options
 :
 -
 -
@@ -2103,6 +1663,13 @@ default
 3
 mozharness
 :
+mochitest
+-
+flavor
+:
+plain
+chunked
+:
 by
 -
 test
@@ -2113,62 +1680,7 @@ android
 .
 *
 :
-mochitest
--
-flavor
-:
-plain
-script
-:
-android_emulator_unittest
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
--
-android
-/
-androidarm_4_3
-.
-py
-default
-:
-mochitest
--
-flavor
-:
-plain
-script
-:
-desktop_unittest
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-chunked
-:
-by
--
-test
--
-platform
-:
+false
 macosx64
 .
 *
@@ -2184,48 +1696,6 @@ false
 default
 :
 true
-config
-:
-by
--
-test
--
-platform
-:
-windows
-.
-*
-:
--
-unittests
-/
-win_taskcluster_unittest
-.
-py
-macosx
-.
-*
-:
--
-unittests
-/
-mac_unittest
-.
-py
-linux
-.
-*
-:
--
-unittests
-/
-linux_unittest
-.
-py
--
-remove_executables
-.
-py
 tier
 :
 by
@@ -2352,65 +1822,9 @@ mochitest
 flavor
 :
 plain
-script
-:
-desktop_unittest
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
 chunked
 :
 true
-config
-:
-by
--
-test
--
-platform
-:
-windows
-.
-*
-:
--
-unittests
-/
-win_taskcluster_unittest
-.
-py
-macosx
-.
-*
-:
--
-unittests
-/
-mac_unittest
-.
-py
-linux
-.
-*
-:
--
-unittests
-/
-linux_unittest
-.
-py
--
-remove_executables
-.
-py
 extra
 -
 options
@@ -2515,65 +1929,9 @@ mochitest
 flavor
 :
 plain
-script
-:
-desktop_unittest
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
 chunked
 :
 true
-config
-:
-by
--
-test
--
-platform
-:
-windows
-.
-*
-:
--
-unittests
-/
-win_taskcluster_unittest
-.
-py
-macosx
-.
-*
-:
--
-unittests
-/
-mac_unittest
-.
-py
-linux
-.
-*
-:
--
-unittests
-/
-linux_unittest
-.
-py
--
-remove_executables
-.
-py
 mochitest
 -
 webgl
@@ -2722,109 +2080,27 @@ layers
 false
 mozharness
 :
-by
--
-test
--
-platform
-:
-android
-.
-*
-:
 mochitest
 -
 flavor
 :
 plain
-script
-:
-android_emulator_unittest
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
--
-android
-/
-androidarm_4_3
-.
-py
-default
-:
-mochitest
--
-flavor
-:
-plain
-script
-:
-desktop_unittest
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
 chunked
 :
-true
-config
-:
 by
 -
 test
 -
 platform
 :
-windows
+android
 .
 *
 :
--
-unittests
-/
-win_taskcluster_unittest
-.
-py
-macosx
-.
-*
+false
+default
 :
--
-unittests
-/
-mac_unittest
-.
-py
-linux
-.
-*
-:
--
-unittests
-/
-linux_unittest
-.
-py
--
-remove_executables
-.
-py
+true
 tier
 :
 by
