--- a/taskcluster/ci/test/reftest.yml
+++ b/taskcluster/ci/test/reftest.yml
@@ -1,3 +1,90 @@
+job
+-
+defaults
+:
+mozharness
+:
+no
+-
+read
+-
+buildbot
+-
+config
+:
+true
+script
+:
+by
+-
+test
+-
+platform
+:
+android
+.
+*
+:
+android_emulator_unittest
+.
+py
+default
+:
+desktop_unittest
+.
+py
+config
+:
+by
+-
+test
+-
+platform
+:
+android
+.
+*
+:
+-
+android
+/
+androidarm_4_3
+.
+py
+linux
+.
+*
+:
+-
+unittests
+/
+linux_unittest
+.
+py
+-
+remove_executables
+.
+py
+macosx
+.
+*
+:
+-
+unittests
+/
+mac_unittest
+.
+py
+windows
+.
+*
+:
+-
+unittests
+/
+win_taskcluster_unittest
+.
+py
 crashtest
 :
 description
@@ -88,101 +175,6 @@ both
 default
 :
 true
-mozharness
-:
-by
--
-test
--
-platform
-:
-android
-.
-*
-:
-script
-:
-android_emulator_unittest
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
--
-android
-/
-androidarm_4_3
-.
-py
-default
-:
-script
-:
-desktop_unittest
-.
-py
-chunked
-:
-false
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
-by
--
-test
--
-platform
-:
-windows
-.
-*
-:
--
-unittests
-/
-win_taskcluster_unittest
-.
-py
-macosx
-.
-*
-:
--
-unittests
-/
-mac_unittest
-.
-py
-linux
-.
-*
-:
--
-unittests
-/
-linux_unittest
-.
-py
--
-remove_executables
-.
-py
 tier
 :
 by
@@ -355,101 +347,6 @@ android
 default
 :
 3600
-mozharness
-:
-by
--
-test
--
-platform
-:
-android
-.
-*
-:
-script
-:
-android_emulator_unittest
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
--
-android
-/
-androidarm_4_3
-.
-py
-default
-:
-script
-:
-desktop_unittest
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-chunked
-:
-true
-config
-:
-by
--
-test
--
-platform
-:
-windows
-.
-*
-:
--
-unittests
-/
-win_taskcluster_unittest
-.
-py
-macosx
-.
-*
-:
--
-unittests
-/
-mac_unittest
-.
-py
-linux
-.
-*
-:
--
-unittests
-/
-linux_unittest
-.
-py
--
-remove_executables
-.
-py
 when
 :
 schedules
@@ -664,6 +561,8 @@ default
 3600
 mozharness
 :
+chunked
+:
 by
 -
 test
@@ -674,52 +573,7 @@ android
 .
 *
 :
-script
-:
-android_emulator_unittest
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
--
-android
-/
-androidarm_4_3
-.
-py
-default
-:
-script
-:
-desktop_unittest
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-chunked
-:
-by
--
-test
--
-platform
-:
+false
 macosx64
 /
 opt
@@ -734,60 +588,9 @@ windows10
 opt
 :
 false
-windows10
--
-64
-.
-*
-/
-debug
-:
-true
 default
 :
 true
-config
-:
-by
--
-test
--
-platform
-:
-windows
-.
-*
-:
--
-unittests
-/
-win_taskcluster_unittest
-.
-py
-macosx
-.
-*
-:
--
-unittests
-/
-mac_unittest
-.
-py
-linux
-.
-*
-:
--
-unittests
-/
-linux_unittest
-.
-py
--
-remove_executables
-.
-py
 tier
 :
 by
@@ -899,65 +702,9 @@ time
 3600
 mozharness
 :
-script
-:
-desktop_unittest
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
 chunked
 :
 true
-config
-:
-by
--
-test
--
-platform
-:
-windows
-.
-*
-:
--
-unittests
-/
-win_taskcluster_unittest
-.
-py
-macosx
-.
-*
-:
--
-unittests
-/
-mac_unittest
-.
-py
-linux
-.
-*
-:
--
-unittests
-/
-linux_unittest
-.
-py
--
-remove_executables
-.
-py
 tier
 :
 default
@@ -1088,20 +835,6 @@ default
 true
 mozharness
 :
-script
-:
-desktop_unittest
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
 chunked
 :
 by
@@ -1127,48 +860,6 @@ false
 default
 :
 true
-config
-:
-by
--
-test
--
-platform
-:
-windows
-.
-*
-:
--
-unittests
-/
-win_taskcluster_unittest
-.
-py
-macosx
-.
-*
-:
--
-unittests
-/
-mac_unittest
-.
-py
-linux
-.
-*
-:
--
-unittests
-/
-linux_unittest
-.
-py
--
-remove_executables
-.
-py
 tier
 :
 by
@@ -1232,59 +923,3 @@ gpu
 chunks
 :
 8
-mozharness
-:
-script
-:
-desktop_unittest
-.
-py
-no
--
-read
--
-buildbot
--
-config
-:
-true
-config
-:
-by
--
-test
--
-platform
-:
-windows
-.
-*
-:
--
-unittests
-/
-win_taskcluster_unittest
-.
-py
-macosx
-.
-*
-:
--
-unittests
-/
-mac_unittest
-.
-py
-default
-:
--
-unittests
-/
-linux_unittest
-.
-py
--
-remove_executables
-.
-py
