servo: Merge #18941 - Move nsstring from gecko into servo/support/gecko/nsstring (from mystor:nsstring); r=mystor
This is the servo side of bug 1403213.

This cannot merge until https://bugzilla.mozilla.org/show_bug.cgi?id=1377351 merges. It is currently on inbound. This will break autoland when it merges until the gecko-side part has also landed.

Source-Repo: https://github.com/servo/servo
Source-Revision: 7e0f5afa83d9f0eba07988735e56f47a2c18b451

UltraBlame original commit: 196206f129efbc4331dc8641e90acd2c5f8d36e2

--- a/servo/components/style/Cargo.toml
+++ b/servo/components/style/Cargo.toml
@@ -106,7 +106,7 @@ gecko
 =
 [
 "
-nsstring_vendor
+nsstring
 "
 "
 num_cpus
@@ -205,7 +205,7 @@ gecko_debug
 =
 [
 "
-nsstring_vendor
+nsstring
 /
 gecko_debug
 "
@@ -409,15 +409,23 @@ matches
 .
 1
 "
-nsstring_vendor
+nsstring
 =
 {
 path
 =
 "
-gecko_bindings
+.
+.
 /
-nsstring_vendor
+.
+.
+/
+support
+/
+gecko
+/
+nsstring
 "
 optional
 =
