Backed out changeset 196206f129ef (bug 1403213) for referencing non-existing xpcom/rust/gtest/moz.build in xpcom/moz.build. r=backout on a CLOSED TREE
UltraBlame original commit: 69998f1363be6b359dc68339892973687b4e834a

--- a/servo/components/style/Cargo.toml
+++ b/servo/components/style/Cargo.toml
@@ -106,7 +106,7 @@ gecko
 =
 [
 "
-nsstring
+nsstring_vendor
 "
 "
 num_cpus
@@ -205,7 +205,7 @@ gecko_debug
 =
 [
 "
-nsstring
+nsstring_vendor
 /
 gecko_debug
 "
@@ -409,23 +409,15 @@ matches
 .
 1
 "
-nsstring
+nsstring_vendor
 =
 {
 path
 =
 "
-.
-.
+gecko_bindings
 /
-.
-.
-/
-support
-/
-gecko
-/
-nsstring
+nsstring_vendor
 "
 optional
 =
