--- a/servo/components/style/gecko_bindings/nsstring_vendor/Cargo.toml
+++ b/servo/components/style/gecko_bindings/nsstring_vendor/Cargo.toml
@@ -4,7 +4,7 @@ package
 name
 =
 "
-nsstring
+nsstring_vendor
 "
 version
 =
@@ -44,13 +44,15 @@ xpcom
 string
 types
 "
-[
-features
-]
-gecko_debug
-=
-[
-]
+#
+Revendoring
+nsstring
+from
+m
+-
+c
+into
+Servo
 [
 dependencies
 ]
@@ -61,3 +63,10 @@ bitflags
 .
 8
 "
+[
+features
+]
+gecko_debug
+=
+[
+]
