Bug 1407868 - Set layout.css.getBoxQuads.enabled and layout.css.convertFromNode.enabled to true while running cssom-view/interfaces.html. r=jgraham
UltraBlame original commit: b1980519c171acb3ed4bdfd3119e8ca6cbab3f05

--- a/testing/web-platform/meta/cssom-view/interfaces.html.ini
+++ b/testing/web-platform/meta/cssom-view/interfaces.html.ini
@@ -1,3 +1,25 @@
+prefs
+:
+[
+layout
+.
+css
+.
+getBoxQuads
+.
+enabled
+:
+true
+layout
+.
+css
+.
+convertFromNode
+.
+enabled
+:
+true
+]
 [
 interfaces
 .
