--- a/taskcluster/ci/test/mochitest.yml
+++ b/taskcluster/ci/test/mochitest.yml
@@ -1,106 +1,3 @@
-job
--
-defaults
-:
-mozharness
-:
-no
--
-read
--
-buildbot
--
-config
-:
-true
-script
-:
-by
--
-test
--
-platform
-:
-android
-.
-*
-:
-android_emulator_unittest
-.
-py
-default
-:
-desktop_unittest
-.
-py
-config
-:
-by
--
-test
--
-platform
-:
-android
--
-4
-.
-2
--
-x86
-/
-opt
-:
--
-android
-/
-androidx86
-.
-py
-android
-.
-*
-:
--
-android
-/
-androidarm_4_3
-.
-py
-linux
-.
-*
-:
--
-unittests
-/
-linux_unittest
-.
-py
--
-remove_executables
-.
-py
-macosx
-.
-*
-:
--
-unittests
-/
-mac_unittest
-.
-py
-windows
-.
-*
-:
--
-unittests
-/
-win_taskcluster_unittest
-.
-py
 mochitest
 :
 description
@@ -327,15 +224,6 @@ default
 default
 mozharness
 :
-mochitest
--
-flavor
-:
-plain
-extra
--
-options
-:
 by
 -
 test
@@ -345,6 +233,37 @@ platform
 android
 .
 *
+:
+mochitest
+-
+flavor
+:
+plain
+script
+:
+android_emulator_unittest
+.
+py
+no
+-
+read
+-
+buildbot
+-
+config
+:
+true
+config
+:
+-
+android
+/
+androidarm_4_3
+.
+py
+extra
+-
+options
 :
 -
 -
@@ -356,9 +275,29 @@ suite
 mochitest
 default
 :
-[
-]
+mochitest
+-
+flavor
+:
+plain
+script
+:
+desktop_unittest
+.
+py
+no
+-
+read
+-
+buildbot
+-
+config
+:
+true
 chunked
+:
+true
+config
 :
 by
 -
@@ -366,14 +305,80 @@ test
 -
 platform
 :
-android
+windows
 .
 *
 :
-false
+-
+unittests
+/
+win_taskcluster_unittest
+.
+py
+macosx
+.
+*
+:
+-
+unittests
+/
+mac_unittest
+.
+py
+linux
+.
+*
+:
+-
+unittests
+/
+linux_unittest
+.
+py
+-
+remove_executables
+.
+py
+extra
+-
+options
+:
+by
+-
+test
+-
+platform
+:
+linux64
+-
+jsdcov
+/
+opt
+:
+-
+-
+-
+mochitest
+-
+suite
+=
+plain
+-
+chunked
+-
+coverage
 default
 :
-true
+-
+-
+-
+mochitest
+-
+suite
+=
+plain
+-
+chunked
 mochitest
 -
 a11y
@@ -444,10 +449,81 @@ built
 projects
 mozharness
 :
+script
+:
+desktop_unittest
+.
+py
+no
+-
+read
+-
+buildbot
+-
+config
+:
+true
+chunked
+:
+false
 mochitest
 -
 flavor
 :
+a11y
+config
+:
+by
+-
+test
+-
+platform
+:
+windows
+.
+*
+:
+-
+unittests
+/
+win_taskcluster_unittest
+.
+py
+macosx
+.
+*
+:
+-
+unittests
+/
+mac_unittest
+.
+py
+linux
+.
+*
+:
+-
+unittests
+/
+linux_unittest
+.
+py
+-
+remove_executables
+.
+py
+extra
+-
+options
+:
+-
+-
+-
+mochitest
+-
+suite
+=
 a11y
 tier
 :
@@ -671,9 +747,107 @@ mochitest
 flavor
 :
 browser
+script
+:
+desktop_unittest
+.
+py
+no
+-
+read
+-
+buildbot
+-
+config
+:
+true
 chunked
 :
 true
+config
+:
+by
+-
+test
+-
+platform
+:
+windows
+.
+*
+:
+-
+unittests
+/
+win_taskcluster_unittest
+.
+py
+macosx
+.
+*
+:
+-
+unittests
+/
+mac_unittest
+.
+py
+linux
+.
+*
+:
+-
+unittests
+/
+linux_unittest
+.
+py
+-
+remove_executables
+.
+py
+extra
+-
+options
+:
+by
+-
+test
+-
+platform
+:
+linux64
+-
+jsdcov
+/
+opt
+:
+-
+-
+-
+mochitest
+-
+suite
+=
+browser
+-
+chrome
+-
+coverage
+default
+:
+-
+-
+-
+mochitest
+-
+suite
+=
+browser
+-
+chrome
+-
+chunked
 #
 Bug
 1281241
@@ -866,6 +1040,78 @@ mochitest
 flavor
 :
 browser
+script
+:
+desktop_unittest
+.
+py
+no
+-
+read
+-
+buildbot
+-
+config
+:
+true
+config
+:
+by
+-
+test
+-
+platform
+:
+windows
+.
+*
+:
+-
+unittests
+/
+win_taskcluster_unittest
+.
+py
+macosx
+.
+*
+:
+-
+unittests
+/
+mac_unittest
+.
+py
+linux
+.
+*
+:
+-
+unittests
+/
+linux_unittest
+.
+py
+-
+remove_executables
+.
+py
+extra
+-
+options
+:
+-
+-
+-
+mochitest
+-
+suite
+=
+browser
+-
+chrome
+-
+screenshots
 allow
 -
 software
@@ -967,31 +1213,6 @@ e10s
 false
 mozharness
 :
-mochitest
--
-flavor
-:
-chrome
-config
-:
-by
--
-test
--
-platform
-:
-macosx
-.
-*
-:
--
-remove_executables
-.
-py
-extra
--
-options
-:
 by
 -
 test
@@ -1001,6 +1222,61 @@ platform
 android
 .
 *
+:
+mochitest
+-
+flavor
+:
+chrome
+script
+:
+android_emulator_unittest
+.
+py
+no
+-
+read
+-
+buildbot
+-
+config
+:
+true
+config
+:
+by
+-
+test
+-
+platform
+:
+android
+-
+4
+.
+2
+-
+x86
+/
+opt
+:
+-
+android
+/
+androidx86
+.
+py
+default
+:
+-
+android
+/
+androidarm_4_3
+.
+py
+extra
+-
+options
 :
 -
 -
@@ -1014,9 +1290,29 @@ mochitest
 chrome
 default
 :
-[
-]
+mochitest
+-
+flavor
+:
+chrome
+script
+:
+desktop_unittest
+.
+py
+no
+-
+read
+-
+buildbot
+-
+config
+:
+true
 chunked
+:
+true
+config
 :
 by
 -
@@ -1024,14 +1320,56 @@ test
 -
 platform
 :
-android
+windows
 .
 *
 :
-false
-default
+-
+unittests
+/
+win_taskcluster_unittest
+.
+py
+macosx
+.
+*
 :
-true
+-
+remove_executables
+.
+py
+-
+unittests
+/
+mac_unittest
+.
+py
+linux
+.
+*
+:
+-
+unittests
+/
+linux_unittest
+.
+py
+-
+remove_executables
+.
+py
+extra
+-
+options
+:
+-
+-
+-
+mochitest
+-
+suite
+=
+chrome
 tier
 :
 by
@@ -1150,31 +1488,6 @@ default
 true
 mozharness
 :
-mochitest
--
-flavor
-:
-plain
-config
-:
-by
--
-test
--
-platform
-:
-macosx
-.
-*
-:
--
-remove_executables
-.
-py
-extra
--
-options
-:
 by
 -
 test
@@ -1184,6 +1497,37 @@ platform
 android
 .
 *
+:
+mochitest
+-
+flavor
+:
+plain
+script
+:
+android_emulator_unittest
+.
+py
+no
+-
+read
+-
+buildbot
+-
+config
+:
+true
+config
+:
+-
+android
+/
+androidarm_4_3
+.
+py
+extra
+-
+options
 :
 #
 note
@@ -1208,6 +1552,78 @@ plain
 -
 clipboard
 default
+:
+mochitest
+-
+flavor
+:
+plain
+script
+:
+desktop_unittest
+.
+py
+no
+-
+read
+-
+buildbot
+-
+config
+:
+true
+chunked
+:
+false
+config
+:
+by
+-
+test
+-
+platform
+:
+windows
+.
+*
+:
+-
+unittests
+/
+win_taskcluster_unittest
+.
+py
+macosx
+.
+*
+:
+-
+remove_executables
+.
+py
+-
+unittests
+/
+mac_unittest
+.
+py
+linux
+.
+*
+:
+-
+unittests
+/
+linux_unittest
+.
+py
+-
+remove_executables
+.
+py
+extra
+-
+options
 :
 -
 -
@@ -1351,9 +1767,111 @@ mochitest
 flavor
 :
 chrome
+script
+:
+desktop_unittest
+.
+py
+no
+-
+read
+-
+buildbot
+-
+config
+:
+true
 chunked
 :
 true
+config
+:
+by
+-
+test
+-
+platform
+:
+windows
+.
+*
+:
+-
+unittests
+/
+win_taskcluster_unittest
+.
+py
+macosx
+.
+*
+:
+-
+unittests
+/
+mac_unittest
+.
+py
+linux
+.
+*
+:
+-
+unittests
+/
+linux_unittest
+.
+py
+-
+remove_executables
+.
+py
+extra
+-
+options
+:
+by
+-
+test
+-
+platform
+:
+linux64
+-
+jsdcov
+/
+opt
+:
+-
+-
+-
+mochitest
+-
+suite
+=
+mochitest
+-
+devtools
+-
+chrome
+-
+coverage
+default
+:
+-
+-
+-
+mochitest
+-
+suite
+=
+mochitest
+-
+devtools
+-
+chrome
+-
+chunked
 instance
 -
 size
@@ -1364,23 +1882,24 @@ test
 -
 platform
 :
-#
-Bug
-1281241
-:
-migrating
-to
-m3
-.
-large
-instances
 linux64
 -
 asan
 /
 opt
 :
-legacy
+xlarge
+#
+runs
+out
+of
+memory
+on
+default
+/
+m3
+.
+large
 default
 :
 default
@@ -1486,15 +2005,6 @@ default
 true
 mozharness
 :
-mochitest
--
-flavor
-:
-plain
-extra
--
-options
-:
 by
 -
 test
@@ -1504,6 +2014,37 @@ platform
 android
 .
 *
+:
+mochitest
+-
+flavor
+:
+plain
+script
+:
+android_emulator_unittest
+.
+py
+no
+-
+read
+-
+buildbot
+-
+config
+:
+true
+config
+:
+-
+android
+/
+androidarm_4_3
+.
+py
+extra
+-
+options
 :
 #
 note
@@ -1528,6 +2069,74 @@ plain
 -
 gpu
 default
+:
+mochitest
+-
+flavor
+:
+plain
+script
+:
+desktop_unittest
+.
+py
+no
+-
+read
+-
+buildbot
+-
+config
+:
+true
+chunked
+:
+false
+config
+:
+by
+-
+test
+-
+platform
+:
+windows
+.
+*
+:
+-
+unittests
+/
+win_taskcluster_unittest
+.
+py
+macosx
+.
+*
+:
+-
+unittests
+/
+mac_unittest
+.
+py
+linux
+.
+*
+:
+-
+unittests
+/
+linux_unittest
+.
+py
+-
+remove_executables
+.
+py
+extra
+-
+options
 :
 -
 -
@@ -1663,13 +2272,6 @@ default
 3
 mozharness
 :
-mochitest
--
-flavor
-:
-plain
-chunked
-:
 by
 -
 test
@@ -1680,7 +2282,76 @@ android
 .
 *
 :
-false
+mochitest
+-
+flavor
+:
+plain
+script
+:
+android_emulator_unittest
+.
+py
+no
+-
+read
+-
+buildbot
+-
+config
+:
+true
+config
+:
+-
+android
+/
+androidarm_4_3
+.
+py
+extra
+-
+options
+:
+-
+-
+-
+test
+-
+suite
+=
+mochitest
+-
+media
+default
+:
+mochitest
+-
+flavor
+:
+plain
+script
+:
+desktop_unittest
+.
+py
+no
+-
+read
+-
+buildbot
+-
+config
+:
+true
+chunked
+:
+by
+-
+test
+-
+platform
+:
 macosx64
 .
 *
@@ -1696,6 +2367,62 @@ false
 default
 :
 true
+config
+:
+by
+-
+test
+-
+platform
+:
+windows
+.
+*
+:
+-
+unittests
+/
+win_taskcluster_unittest
+.
+py
+macosx
+.
+*
+:
+-
+unittests
+/
+mac_unittest
+.
+py
+linux
+.
+*
+:
+-
+unittests
+/
+linux_unittest
+.
+py
+-
+remove_executables
+.
+py
+extra
+-
+options
+:
+-
+-
+-
+mochitest
+-
+suite
+=
+mochitest
+-
+media
 tier
 :
 by
@@ -1822,13 +2549,79 @@ mochitest
 flavor
 :
 plain
+script
+:
+desktop_unittest
+.
+py
+no
+-
+read
+-
+buildbot
+-
+config
+:
+true
 chunked
 :
 true
+config
+:
+by
+-
+test
+-
+platform
+:
+windows
+.
+*
+:
+-
+unittests
+/
+win_taskcluster_unittest
+.
+py
+macosx
+.
+*
+:
+-
+unittests
+/
+mac_unittest
+.
+py
+linux
+.
+*
+:
+-
+unittests
+/
+linux_unittest
+.
+py
+-
+remove_executables
+.
+py
 extra
 -
 options
 :
+-
+-
+-
+mochitest
+-
+suite
+=
+plain
+-
+chunked
 -
 -
 -
@@ -1929,9 +2722,79 @@ mochitest
 flavor
 :
 plain
+script
+:
+desktop_unittest
+.
+py
+no
+-
+read
+-
+buildbot
+-
+config
+:
+true
 chunked
 :
 true
+config
+:
+by
+-
+test
+-
+platform
+:
+windows
+.
+*
+:
+-
+unittests
+/
+win_taskcluster_unittest
+.
+py
+macosx
+.
+*
+:
+-
+unittests
+/
+mac_unittest
+.
+py
+linux
+.
+*
+:
+-
+unittests
+/
+linux_unittest
+.
+py
+-
+remove_executables
+.
+py
+extra
+-
+options
+:
+-
+-
+-
+mochitest
+-
+suite
+=
+valgrind
+-
+plain
 mochitest
 -
 webgl
@@ -2080,13 +2943,6 @@ layers
 false
 mozharness
 :
-mochitest
--
-flavor
-:
-plain
-chunked
-:
 by
 -
 test
@@ -2097,10 +2953,127 @@ android
 .
 *
 :
-false
-default
+mochitest
+-
+flavor
+:
+plain
+script
+:
+android_emulator_unittest
+.
+py
+no
+-
+read
+-
+buildbot
+-
+config
 :
 true
+config
+:
+-
+android
+/
+androidarm_4_3
+.
+py
+extra
+-
+options
+:
+-
+-
+-
+test
+-
+suite
+=
+mochitest
+-
+gl
+default
+:
+mochitest
+-
+flavor
+:
+plain
+script
+:
+desktop_unittest
+.
+py
+no
+-
+read
+-
+buildbot
+-
+config
+:
+true
+chunked
+:
+true
+config
+:
+by
+-
+test
+-
+platform
+:
+windows
+.
+*
+:
+-
+unittests
+/
+win_taskcluster_unittest
+.
+py
+macosx
+.
+*
+:
+-
+unittests
+/
+mac_unittest
+.
+py
+linux
+.
+*
+:
+-
+unittests
+/
+linux_unittest
+.
+py
+-
+remove_executables
+.
+py
+extra
+-
+options
+:
+-
+-
+-
+mochitest
+-
+suite
+=
+mochitest
+-
+gl
 tier
 :
 by
