Bug 1410396: Skip test_conformance__glsl__misc__shader-uniform-packing-restrictions.html on Linux debug too. rpending=jgilbert
Since it's timing out very frequently on central, and apparently the culprit is
bug 1409088, which just added a relatively expensive assertion in layout.

Since that assertion has caught at least two bugs already since it landed, I
really don't want to remove it...

MozReview-Commit-ID: JVeAVKZe1PE

UltraBlame original commit: 279674b701a825da09e8994a471796cd297dfde7

--- a/dom/canvas/test/webgl-conf/mochitest-errata.ini
+++ b/dom/canvas/test/webgl-conf/mochitest-errata.ini
@@ -7819,6 +7819,8 @@ Frequent
 timeout
 on
 win7
+and
+linux
 debug
 .
 skip
@@ -7851,6 +7853,19 @@ os_version
 6
 .
 1
+'
+&
+&
+debug
+)
+|
+|
+(
+os
+=
+=
+'
+linux
 '
 &
 &
