--- a/browser/base/content/test/popups/browser.ini
+++ b/browser/base/content/test/popups/browser.ini
@@ -67,3 +67,18 @@ html
 popup_blocker_b
 .
 html
+[
+browser_popup_blocker_identity_block
+.
+js
+]
+support
+-
+files
+=
+popup_blocker2
+.
+html
+popup_blocker_a
+.
+html
