Bug 1403027 - Do not throw from PerformanceObserver.observe when none of the entryTypes are known (log a JS console warning instead); r=bz
MozReview-Commit-ID: Lx2cjWDX8sh

UltraBlame original commit: c5f2f0e827d03ed659348b586b16493e9588fde2

--- a/testing/web-platform/meta/longtask-timing/longtask-attributes.html.ini
+++ b/testing/web-platform/meta/longtask-timing/longtask-attributes.html.ini
@@ -8,6 +8,9 @@ html
 type
 :
 testharness
+expected
+:
+TIMEOUT
 [
 Performance
 longtask
@@ -17,7 +20,7 @@ observable
 ]
 expected
 :
-FAIL
+TIMEOUT
 [
 Performance
 longtask
@@ -28,4 +31,4 @@ observable
 ]
 expected
 :
-FAIL
+TIMEOUT
