--- a/testing/web-platform/meta/longtask-timing/longtask-in-childiframe.html.ini
+++ b/testing/web-platform/meta/longtask-timing/longtask-in-childiframe.html.ini
@@ -10,6 +10,9 @@ html
 type
 :
 testharness
+expected
+:
+TIMEOUT
 [
 Performance
 longtask
@@ -24,7 +27,7 @@ parent
 ]
 expected
 :
-FAIL
+TIMEOUT
 [
 Performance
 longtask
@@ -40,4 +43,4 @@ parent
 ]
 expected
 :
-FAIL
+TIMEOUT
