--- a/testing/web-platform/meta/longtask-timing/longtask-in-externalscript.html.ini
+++ b/testing/web-platform/meta/longtask-timing/longtask-in-externalscript.html.ini
@@ -10,6 +10,9 @@ html
 type
 :
 testharness
+expected
+:
+TIMEOUT
 [
 Performance
 longtask
@@ -19,7 +22,7 @@ observable
 ]
 expected
 :
-FAIL
+TIMEOUT
 [
 Performance
 longtask
@@ -30,4 +33,4 @@ observable
 ]
 expected
 :
-FAIL
+TIMEOUT
