--- a/testing/web-platform/meta/navigation-timing/nav2_test_attributes_values.html.ini
+++ b/testing/web-platform/meta/navigation-timing/nav2_test_attributes_values.html.ini
@@ -6,6 +6,9 @@ html
 type
 :
 testharness
+expected
+:
+TIMEOUT
 [
 Performance
 navigation
@@ -20,4 +23,4 @@ reasonable
 ]
 expected
 :
-FAIL
+TIMEOUT
