--- a/testing/web-platform/meta/navigation-timing/nav2_test_instance_accessors.html.ini
+++ b/testing/web-platform/meta/navigation-timing/nav2_test_instance_accessors.html.ini
@@ -6,6 +6,9 @@ html
 type
 :
 testharness
+expected
+:
+TIMEOUT
 [
 Performance
 navigation
@@ -21,4 +24,4 @@ accessors
 ]
 expected
 :
-FAIL
+TIMEOUT
