--- a/testing/web-platform/meta/longtask-timing/longtask-in-childiframe-crossorigin.html.ini
+++ b/testing/web-platform/meta/longtask-timing/longtask-in-childiframe-crossorigin.html.ini
@@ -12,6 +12,9 @@ html
 type
 :
 testharness
+expected
+:
+TIMEOUT
 [
 Performance
 longtask
@@ -26,7 +29,7 @@ parent
 ]
 expected
 :
-FAIL
+TIMEOUT
 [
 Performance
 longtask
@@ -42,4 +45,4 @@ parent
 ]
 expected
 :
-FAIL
+TIMEOUT
