--- a/testing/web-platform/meta/navigation-timing/nav2_test_attributes_exist.html.ini
+++ b/testing/web-platform/meta/navigation-timing/nav2_test_attributes_exist.html.ini
@@ -6,6 +6,9 @@ html
 type
 :
 testharness
+expected
+:
+TIMEOUT
 [
 Performance
 navigation
@@ -17,4 +20,4 @@ observable
 ]
 expected
 :
-FAIL
+TIMEOUT
