Backed out changeset c5f2f0e827d0 (bug 1403027) for build bustage at dom/workers/WorkerPrivate.cpp(984): expression did not evaluate to a constant, at least on Windows. r=backout on a CLOSED TREE
UltraBlame original commit: 7e4c85c43cf55d2cd8d299f043fc2eb05e6b2246

--- a/testing/web-platform/meta/longtask-timing/longtask-attributes.html.ini
+++ b/testing/web-platform/meta/longtask-timing/longtask-attributes.html.ini
@@ -8,9 +8,6 @@ html
 type
 :
 testharness
-expected
-:
-TIMEOUT
 [
 Performance
 longtask
@@ -20,7 +17,7 @@ observable
 ]
 expected
 :
-TIMEOUT
+FAIL
 [
 Performance
 longtask
@@ -31,4 +28,4 @@ observable
 ]
 expected
 :
-TIMEOUT
+FAIL
