--- a/testing/web-platform/meta/longtask-timing/longtask-in-childiframe-crossorigin.html.ini
+++ b/testing/web-platform/meta/longtask-timing/longtask-in-childiframe-crossorigin.html.ini
@@ -12,9 +12,6 @@ html
 type
 :
 testharness
-expected
-:
-TIMEOUT
 [
 Performance
 longtask
@@ -29,7 +26,7 @@ parent
 ]
 expected
 :
-TIMEOUT
+FAIL
 [
 Performance
 longtask
@@ -45,4 +42,4 @@ parent
 ]
 expected
 :
-TIMEOUT
+FAIL
