--- a/testing/web-platform/meta/longtask-timing/longtask-in-childiframe.html.ini
+++ b/testing/web-platform/meta/longtask-timing/longtask-in-childiframe.html.ini
@@ -10,9 +10,6 @@ html
 type
 :
 testharness
-expected
-:
-TIMEOUT
 [
 Performance
 longtask
@@ -27,7 +24,7 @@ parent
 ]
 expected
 :
-TIMEOUT
+FAIL
 [
 Performance
 longtask
@@ -43,4 +40,4 @@ parent
 ]
 expected
 :
-TIMEOUT
+FAIL
