--- a/testing/web-platform/meta/navigation-timing/nav2_test_attributes_exist.html.ini
+++ b/testing/web-platform/meta/navigation-timing/nav2_test_attributes_exist.html.ini
@@ -6,9 +6,6 @@ html
 type
 :
 testharness
-expected
-:
-TIMEOUT
 [
 Performance
 navigation
@@ -20,4 +17,4 @@ observable
 ]
 expected
 :
-TIMEOUT
+FAIL
