--- a/testing/web-platform/meta/navigation-timing/nav2_test_instance_accessors.html.ini
+++ b/testing/web-platform/meta/navigation-timing/nav2_test_instance_accessors.html.ini
@@ -6,9 +6,6 @@ html
 type
 :
 testharness
-expected
-:
-TIMEOUT
 [
 Performance
 navigation
@@ -24,4 +21,4 @@ accessors
 ]
 expected
 :
-TIMEOUT
+FAIL
