--- a/testing/web-platform/meta/longtask-timing/longtask-in-raf.html.ini
+++ b/testing/web-platform/meta/longtask-timing/longtask-in-raf.html.ini
@@ -10,9 +10,6 @@ html
 type
 :
 testharness
-expected
-:
-TIMEOUT
 [
 Performance
 longtask
@@ -22,7 +19,7 @@ observable
 ]
 expected
 :
-TIMEOUT
+FAIL
 [
 Performance
 longtask
@@ -33,4 +30,4 @@ observable
 ]
 expected
 :
-TIMEOUT
+FAIL
