--- a/testing/web-platform/meta/navigation-timing/nav2_test_attributes_values.html.ini
+++ b/testing/web-platform/meta/navigation-timing/nav2_test_attributes_values.html.ini
@@ -6,9 +6,6 @@ html
 type
 :
 testharness
-expected
-:
-TIMEOUT
 [
 Performance
 navigation
@@ -23,4 +20,4 @@ reasonable
 ]
 expected
 :
-TIMEOUT
+FAIL
