Bug 1383300 - Move common payment tasks, methods and details to PaymentTestUtils. r=marcosc
MozReview-Commit-ID: 2jy2NXALKyd

UltraBlame original commit: 4b4b4cad9bf548e52f37acf30c8554e9a9903866

--- a/toolkit/components/payments/test/browser/browser.ini
+++ b/toolkit/components/payments/test/browser/browser.ini
@@ -6,6 +6,37 @@ head
 head
 .
 js
+prefs
+=
+dom
+.
+payments
+.
+request
+.
+enabled
+=
+true
+skip
+-
+if
+=
+!
+e10s
+#
+Bug
+1365964
+-
+Payment
+Request
+isn
+'
+t
+implemented
+for
+non
+-
+e10s
 support
 -
 files
@@ -23,23 +54,3 @@ browser_show_dialog
 .
 js
 ]
-#
-Bug
-1365964
--
-Payment
-Request
-isn
-'
-t
-implemented
-for
-non
--
-e10s
-skip
--
-if
-=
-!
-e10s
