--- a/toolkit/components/payments/test/browser/browser.ini
+++ b/toolkit/components/payments/test/browser/browser.ini
@@ -45,12 +45,22 @@ blank_page
 .
 html
 [
+browser_host_name
+.
+js
+]
+[
 browser_request_summary
 .
 js
 ]
 [
 browser_show_dialog
+.
+js
+]
+[
+browser_total
 .
 js
 ]
