Backed out changeset e40240828163 (bug 1403653)
UltraBlame original commit: 9f108013a77d8489ec9ab603fb315233bba75083

--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -1726,6 +1726,26 @@ substs
 ANDROID_SUPPORT_LIBRARY_VERSION
 }
 "
+compile
+"
+com
+.
+android
+.
+support
+:
+palette
+-
+v7
+:
+{
+mozconfig
+.
+substs
+.
+ANDROID_SUPPORT_LIBRARY_VERSION
+}
+"
 if
 (
 mozconfig
