Bug 1405124 - Set appropriate version code and string for GeckoView AAR r=nalexander
MozReview-Commit-ID: DZAxlp7zBHv

UltraBlame original commit: d985d6be2d1bec563680471e43fef99ca9a7df7b

--- a/mobile/android/geckoview/build.gradle
+++ b/mobile/android/geckoview/build.gradle
@@ -24,16 +24,265 @@ android
 .
 library
 '
-def
-VERSION_NAME
-=
-'
-0
+/
+/
+This
+converts
+MOZ_APP_VERSION
+into
+an
+integer
+/
+/
+version
+code
 .
-0
+/
+/
+/
+/
+We
+take
+something
+like
+58
 .
 1
+.
+2a1
+and
+come
+out
+with
+5800102
+/
+/
+This
+gives
+us
+3
+digits
+for
+the
+major
+number
+and
+2
+digits
+/
+/
+each
+for
+the
+minor
+and
+build
+number
+.
+Beta
+and
+Release
+def
+computeVersionCode
+(
+)
+{
+String
+appVersion
+=
+mozconfig
+.
+substs
+.
+MOZ_APP_VERSION
+/
+/
+Split
+on
+the
+dot
+delimiter
+e
+.
+g
+.
+58
+.
+1
+.
+1a1
+-
+>
+[
+"
+58
+"
+1
+"
+"
+1a1
+"
+]
+String
+[
+]
+parts
+=
+appVersion
+.
+split
+(
 '
+\
+\
+.
+'
+)
+assert
+parts
+.
+size
+(
+)
+=
+=
+2
+|
+|
+parts
+.
+size
+(
+)
+=
+=
+3
+/
+/
+Strip
+out
+any
+milestone
+string
+(
+'
+a1
+'
+in
+the
+above
+example
+)
+/
+/
+Present
+in
+Nightly
+(
+or
+local
+)
+builds
+only
+.
+parts
+.
+eachWithIndex
+{
+ver
+index
+-
+>
+parts
+[
+index
+]
+=
+ver
+.
+replaceFirst
+(
+/
+[
+a
+-
+zA
+-
+Z
+]
+.
+*
+/
+"
+"
+)
+}
+/
+/
+Major
+int
+code
+=
+Integer
+.
+parseInt
+(
+parts
+[
+0
+]
+)
+*
+100000
+/
+/
+Minor
+code
++
+=
+Integer
+.
+parseInt
+(
+parts
+[
+1
+]
+)
+*
+100
+/
+/
+Build
+if
+(
+parts
+.
+size
+(
+)
+=
+=
+3
+)
+{
+code
++
+=
+Integer
+.
+parseInt
+(
+parts
+[
+2
+]
+)
+}
+return
+code
+;
+}
 android
 {
 compileSdkVersion
@@ -75,53 +324,28 @@ project
 ext
 .
 manifestPlaceholders
-/
-/
-TODO
-:
-version
-GeckoView
-explicitly
-.
-We
-'
-d
-like
-to
-avoid
-/
-/
+versionCode
+computeVersionCode
+(
+)
+versionName
+"
+{
 mozconfig
 .
 substs
 .
-ANDROID_VERSION_CODE
-which
-won
-'
-t
-be
-intuitive
-to
-/
-/
-consumer
-(
-and
-advances
-very
-quickly
-on
-pre
+MOZ_APP_VERSION
+}
 -
-release
-channels
-)
+{
+mozconfig
 .
-versionCode
-1
-versionName
-VERSION_NAME
+substs
+.
+MOZ_UPDATE_CHANNEL
+}
+"
 consumerProguardFiles
 '
 proguard
@@ -408,6 +632,27 @@ mozconfig
 substs
 .
 MOZ_APP_UA_NAME
+}
+\
+"
+"
+;
+buildConfigField
+'
+String
+'
+"
+MOZ_UPDATE_CHANNEL
+"
+"
+\
+"
+{
+mozconfig
+.
+substs
+.
+MOZ_UPDATE_CHANNEL
 }
 \
 "
@@ -932,26 +1177,6 @@ substs
 ANDROID_SUPPORT_LIBRARY_VERSION
 }
 "
-compile
-"
-com
-.
-android
-.
-support
-:
-palette
--
-v7
-:
-{
-mozconfig
-.
-substs
-.
-ANDROID_SUPPORT_LIBRARY_VERSION
-}
-"
 }
 task
 syncPreprocessedCode
@@ -1336,9 +1561,14 @@ windowTitle
 "
 Mozilla
 GeckoView
-Android
+{
+mozconfig
+.
+substs
+.
+MOZ_APP_VERSION
+}
 API
-VERSION_NAME
 Reference
 "
 )
@@ -1349,9 +1579,13 @@ docTitle
 "
 Mozilla
 GeckoView
-Android
-API
-VERSION_NAME
+{
+mozconfig
+.
+substs
+.
+MOZ_APP_VERSION
+}
 "
 )
 options
@@ -1361,9 +1595,14 @@ header
 "
 Mozilla
 GeckoView
-Android
+{
+mozconfig
+.
+substs
+.
+MOZ_APP_VERSION
+}
 API
-VERSION_NAME
 Reference
 "
 )
@@ -1634,14 +1873,34 @@ pom
 .
 artifactId
 =
-'
+"
 geckoview
-'
+-
+{
+mozconfig
+.
+substs
+.
+MOZ_UPDATE_CHANNEL
+}
+-
+{
+mozconfig
+.
+substs
+.
+ANDROID_CPU_ARCH
+}
+"
 pom
 .
 version
 =
-VERSION_NAME
+mozconfig
+.
+substs
+.
+MOZ_APP_VERSION
 pom
 .
 project
