Bug 1403502 - Move some xpcshell-tests from toolkit/components/places/unit to unifiedcomplete. r=Standard8
UltraBlame original commit: a91380aed135113cf269371b4056ee637d907173

--- a/toolkit/components/places/tests/unifiedcomplete/xpcshell.ini
+++ b/toolkit/components/places/tests/unifiedcomplete/xpcshell.ini
@@ -16,6 +16,11 @@ toolkit
 '
 android
 '
+firefox
+-
+appdir
+=
+browser
 support
 -
 files
@@ -84,6 +89,11 @@ test_autocomplete_functional
 js
 ]
 [
+test_autocomplete_stopSearch_no_throw
+.
+js
+]
+[
 test_autofill_default_behavior
 .
 js
@@ -144,6 +154,11 @@ test_extension_matches
 js
 ]
 [
+test_history_autocomplete_tags
+.
+js
+]
+[
 test_ignore_protocol
 .
 js
@@ -170,6 +185,11 @@ js
 ]
 [
 test_multi_word_search
+.
+js
+]
+[
+test_PlacesSearchAutocompleteProvider
 .
 js
 ]
