Bug 1410967 - refresh the list of thirdparties r=andi
MozReview-Commit-ID: 8jGpovY87n2

UltraBlame original commit: 790d3b90345fe6cd0e424771d1656fd9d4555f21

--- a/.clang-format-ignore
+++ b/.clang-format-ignore
@@ -352,18 +352,6 @@ src
 .
 *
 ^
-dom
-/
-media
-/
-platforms
-/
-ffmpeg
-/
-libav
-.
-*
-^
 extensions
 /
 spellcheck
@@ -717,14 +705,10 @@ double
 -
 conversion
 /
-source
+double
+-
+conversion
 /
-.
-*
-^
-mfbt
-/
-lz4
 .
 *
 ^
@@ -1114,6 +1098,15 @@ toolkit
 components
 /
 jsoncpp
+/
+.
+*
+^
+toolkit
+/
+components
+/
+lz4
 /
 .
 *
