--- a/js/src/old-configure.in
+++ b/js/src/old-configure.in
@@ -5165,6 +5165,177 @@ dnl
 =
 =
 dnl
+Add
+optional
+and
+non
+-
+optional
+hardening
+flags
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+if
+test
+"
+GNU_CC
+"
+-
+o
+test
+-
+n
+"
+{
+CLANG_CC
+}
+{
+CLANG_CL
+}
+"
+;
+then
+CFLAGS
+=
+"
+CFLAGS
+-
+D_FORTIFY_SOURCE
+=
+2
+"
+CPPFLAGS
+=
+"
+CPPFLAGS
+-
+D_FORTIFY_SOURCE
+=
+2
+"
+CXXFLAGS
+=
+"
+CXXFLAGS
+-
+D_FORTIFY_SOURCE
+=
+2
+"
+fi
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+dnl
 System
 overrides
 of
