Bug 1410624: Add some declarations and bindings so the build isn't busted when servo-vcs-sync goes back alive. r=me,heycam
https://github.com/servo/servo/pull/18988 has merged a while ago in servo, but
since the sync service is down, I haven't been able to land the relevant patches
today.

This at least ensures that the build isn't busted when servo-vcs-sync goes back
up.

MozReview-Commit-ID: 9ohgwcnMc5T

UltraBlame original commit: b43cc917edadafe3c06888ba02d464a12b2d502b

--- a/layout/style/ServoBindings.toml
+++ b/layout/style/ServoBindings.toml
@@ -1552,6 +1552,9 @@ nsRestyleHint
 nsresult
 "
 "
+nsSimpleContentList
+"
+"
 nsSize
 "
 "
@@ -2882,6 +2885,9 @@ nsIDocument
 "
 "
 nsIDocument_DocumentTheme
+"
+"
+nsSimpleContentList
 "
 "
 RawGeckoAnimationPropertySegment
