Bug 1410769: Use SHA-1 signing when MAR_OLD_FORMAT is set; r=nalexander,rstrong
MozReview-Commit-ID: DFjcozLqskI

UltraBlame original commit: 26444ee0baf18f08fded67982ee28b232c44e0c1

--- a/tools/update-packaging/Makefile.in
+++ b/tools/update-packaging/Makefile.in
@@ -305,6 +305,16 @@ mar
 MOZ_EXTERNAL_SIGNING_FORMAT
 )
 endif
+ifndef
+MAR_OLD_FORMAT
+MAR_SIGN_FORMAT
+=
+mar_sha384
+else
+MAR_SIGN_FORMAT
+=
+mar
+endif
 dir
 -
 stage
@@ -402,7 +412,9 @@ MOZ_SIGN_CMD
 )
 -
 f
-mar_sha384
+(
+MAR_SIGN_FORMAT
+)
 '
 (
 DIST
@@ -489,7 +501,9 @@ MOZ_SIGN_CMD
 )
 -
 f
-mar_sha384
+(
+MAR_SIGN_FORMAT
+)
 '
 (
 STAGE_DIR
