Bug 1403131 - Run linters against mozharness scripts and configs.  r=rail
UltraBlame original commit: 6fa6cfe0199ca95e3a37f35f59ba047849e2ae80

--- a/tools/lint/flake8.yml
+++ b/tools/lint/flake8.yml
@@ -10,32 +10,6 @@ linter
 include
 :
 -
-build
-/
-moz
-.
-configure
-/
-*
-.
-configure
--
-build
-/
-*
-.
-py
--
-configure
-.
-py
--
-config
-/
-check_macroassembler_style
-.
-py
--
 config
 /
 mozunit
@@ -108,11 +82,29 @@ puppeteer
 -
 testing
 /
+mochitest
+-
+testing
+/
 mozbase
 -
 testing
 /
-mochitest
+mozharness
+/
+mozfile
+-
+testing
+/
+mozharness
+/
+mozinfo
+-
+testing
+/
+mozharness
+/
+scripts
 -
 testing
 /
@@ -190,22 +182,9 @@ exclude
 :
 [
 ]
-#
-The
-configure
-option
-is
-used
-by
-the
-build
-system
 extensions
 :
 [
-'
-configure
-'
 '
 py
 '
