Backed out changeset 6fa6cfe0199c (bug 1403131) for mass reftest failures. r=backout on a CLOSED TREE
UltraBlame original commit: 32faa962a6056f8c774a4bc8af9fc4f8b6b18498

--- a/tools/lint/flake8.yml
+++ b/tools/lint/flake8.yml
@@ -10,6 +10,32 @@ linter
 include
 :
 -
+build
+/
+moz
+.
+configure
+/
+*
+.
+configure
+-
+build
+/
+*
+.
+py
+-
+configure
+.
+py
+-
+config
+/
+check_macroassembler_style
+.
+py
+-
 config
 /
 mozunit
@@ -82,29 +108,11 @@ puppeteer
 -
 testing
 /
-mochitest
--
-testing
-/
 mozbase
 -
 testing
 /
-mozharness
-/
-mozfile
--
-testing
-/
-mozharness
-/
-mozinfo
--
-testing
-/
-mozharness
-/
-scripts
+mochitest
 -
 testing
 /
@@ -182,9 +190,22 @@ exclude
 :
 [
 ]
+#
+The
+configure
+option
+is
+used
+by
+the
+build
+system
 extensions
 :
 [
+'
+configure
+'
 '
 py
 '
