--- a/browser/base/content/test/alerts/browser.ini
+++ b/browser/base/content/test/alerts/browser.ini
@@ -34,6 +34,19 @@ browser_notification_do_not_disturb
 .
 js
 ]
+skip
+-
+if
+=
+os
+=
+=
+'
+win
+'
+#
+Bug
+1352791
 [
 browser_notification_open_settings
 .
