--- a/dom/workers/test/serviceworkers/browser.ini
+++ b/dom/workers/test/serviceworkers/browser.ini
@@ -51,18 +51,31 @@ browser_multie10s_update
 .
 js
 ]
-run
+skip
 -
 if
 =
+!
 e10s
+|
+|
+os
+!
+=
+"
+win
+"
+#
+Bug
+1404914
 [
 browser_userContextId_openWindow
 .
 js
 ]
-run
+skip
 -
 if
 =
+!
 e10s
