--- a/dom/payments/test/mochitest.ini
+++ b/dom/payments/test/mochitest.ini
@@ -78,6 +78,30 @@ test_basiccard
 html
 ]
 [
+test_block_none10s
+.
+html
+]
+skip
+-
+if
+=
+e10s
+#
+Bug
+1408250
+:
+Don
+'
+t
+expose
+PaymentRequest
+Constructor
+in
+non
+-
+e10s
+[
 test_canMakePayment
 .
 html
