Bug 1395539 - Disable toolkit/mozapps/extensions/test/browser/browser_bug591465.js on linux/opt to get tests running in multi-core. r=gbrown
UltraBlame original commit: 5d28f87d07b2407b58940f8c027930b0cbcfe69a

--- a/toolkit/mozapps/extensions/test/browser/browser-common.ini
+++ b/toolkit/mozapps/extensions/test/browser/browser-common.ini
@@ -154,6 +154,29 @@ browser_bug591465
 .
 js
 ]
+skip
+-
+if
+=
+os
+=
+=
+"
+linux
+"
+&
+&
+!
+debug
+#
+Bug
+1395539
+-
+fails
+on
+multi
+-
+core
 [
 browser_bug591663
 .
