Bug 1410306 - Disable dom/canvas/test/webgl-conf/generated/test_2_conformance__glsl__misc__shader-uniform-packing-restrictions.html on win7/debug for frequent failures. r=me, a=testonly
UltraBlame original commit: e766ce2b451720a9a59161244845a05f81cf19ec

--- a/dom/canvas/test/webgl-conf/mochitest-errata.ini
+++ b/dom/canvas/test/webgl-conf/mochitest-errata.ini
@@ -13229,6 +13229,56 @@ os_version
 [
 generated
 /
+test_2_conformance__glsl__misc__shader
+-
+uniform
+-
+packing
+-
+restrictions
+.
+html
+]
+#
+Failures
+on
+win7
+/
+debug
+on
+oct
+20th
+2017
+bug
+1410306
+skip
+-
+if
+=
+(
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+6
+.
+1
+'
+&
+&
+debug
+)
+[
+generated
+/
 test_2_conformance__textures__misc__tex
 -
 image
