Bug 1403213 - Move nsstring into servo/support/gecko/nsstring, r=froydnj
MozReview-Commit-ID: 8ucStGkxmj7

UltraBlame original commit: e07ca12a3b94509be582df83e4ecdc36c13bba4d

--- a/xpcom/rust/gtest/nsstring/Cargo.toml
+++ b/xpcom/rust/gtest/nsstring/Cargo.toml
@@ -5,6 +5,8 @@ name
 =
 "
 nsstring
+-
+gtest
 "
 version
 =
@@ -37,7 +39,9 @@ MPL
 description
 =
 "
-Rust
+Tests
+for
+rust
 bindings
 to
 xpcom
@@ -47,10 +51,40 @@ types
 [
 dependencies
 ]
-bitflags
+nsstring
+=
+{
+path
 =
 "
-0
 .
-8
+.
+/
+.
+.
+/
+.
+.
+/
+.
+.
+/
+servo
+/
+support
+/
+gecko
+/
+nsstring
+"
+}
+[
+lib
+]
+path
+=
+"
+test
+.
+rs
 "
