Bug 1410654: extend WebRTC Scalar Telemetry probes to 62. r=francois,mjf
MozReview-Commit-ID: JbXfJdIHN1a

UltraBlame original commit: b6cbcef3f3e1c448d27b1339cb5a42a4e077dd57

--- a/toolkit/components/telemetry/Scalars.yaml
+++ b/toolkit/components/telemetry/Scalars.yaml
@@ -3019,7 +3019,7 @@ rfc5766
 expires
 :
 "
-57
+62
 "
 kind
 :
@@ -3034,6 +3034,10 @@ ice
 telemetry
 -
 alerts
+mozilla
+.
+com
+nohlmeier
 mozilla
 .
 com
@@ -3173,7 +3177,7 @@ rfc5766
 expires
 :
 "
-57
+62
 "
 kind
 :
@@ -3188,6 +3192,10 @@ ice
 telemetry
 -
 alerts
+mozilla
+.
+com
+nohlmeier
 mozilla
 .
 com
@@ -3316,7 +3324,7 @@ rfc5766
 expires
 :
 "
-57
+62
 "
 kind
 :
@@ -3331,6 +3339,10 @@ ice
 telemetry
 -
 alerts
+mozilla
+.
+com
+nohlmeier
 mozilla
 .
 com
@@ -3443,7 +3455,7 @@ rfc5766
 expires
 :
 "
-57
+62
 "
 kind
 :
@@ -3458,6 +3470,10 @@ ice
 telemetry
 -
 alerts
+mozilla
+.
+com
+nohlmeier
 mozilla
 .
 com
