Bug 1403131 - Run linters against mozharness scripts and configs. r=rail
MozReview-Commit-ID: 3dkx1SQiIns

UltraBlame original commit: 3f30519845d3774e544e7f057567b49be57c2144

--- a/tools/lint/flake8.yml
+++ b/tools/lint/flake8.yml
@@ -108,11 +108,29 @@ puppeteer
 -
 testing
 /
+mochitest
+-
+testing
+/
 mozbase
 -
 testing
 /
-mochitest
+mozharness
+/
+mozfile
+-
+testing
+/
+mozharness
+/
+mozinfo
+-
+testing
+/
+mozharness
+/
+scripts
 -
 testing
 /
@@ -142,12 +160,6 @@ git
 tools
 /
 lint
--
-tools
-/
-mach_commands
-.
-py
 -
 tools
 /
