Bug 1411528 - Disable service worker test for OOM during crash on Windows, a=testonly
MozReview-Commit-ID: 53HAc0GP9EQ

UltraBlame original commit: c80fbf59afdeb96357896cd7a931696139b81055

--- a/testing/web-platform/meta/service-workers/service-worker/redirected-response.https.html.ini
+++ b/testing/web-platform/meta/service-workers/service-worker/redirected-response.https.html.ini
@@ -10,6 +10,35 @@ html
 type
 :
 testharness
+disabled
+:
+if
+debug
+and
+os
+=
+=
+"
+win
+"
+:
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1411528
 expected
 :
 if
