Bug 1400323 - Disable test browser_stayopenmenu.js on osx/debug for on-going intermittent failures; r=me,test-only
As suggested - thanks :mak!

UltraBlame original commit: 511604f49a82fa3bc0982eb419882f4b960ccd34

--- a/browser/components/places/tests/browser/browser.ini
+++ b/browser/components/places/tests/browser/browser.ini
@@ -327,6 +327,22 @@ browser_stayopenmenu
 .
 js
 ]
+skip
+-
+if
+=
+os
+=
+=
+"
+mac
+"
+&
+&
+debug
+#
+bug
+1400323
 [
 browser_toolbar_drop_text
 .
