Bug 1411081 - Move --enable-optimize/MOZ_OPTIMIZE to moz.configure; r=glandium
The Rust optimization logic is tied to --enable-optimize/MOZ_OPTIMIZE
and --enable-debug/MOZ_DEBUG. In order to more easily implement more
customization, let's move --enable-optimize/MOZ_OPTIMIZE to
moz.configure so its value can be consulted there.

The logic here is a bit wonky. The option behaves like a boolean
or a string. If a string, MOZ_OPTIMIZE is set to 2. Otherwise it
is 1 or unset depending on the boolean value.

The custom compiler flags string is passed to old-configure, where it
overwrites whatever old-configure derived as the default value.
We stop short of moving all references to MOZ_OPTIMIZE_FLAGS to
moz.configure because there are a handful of them and I don't want
to scope bloat.

MozReview-Commit-ID: 6iNDu2HwLGr

UltraBlame original commit: deddd7b55752e2bf44f63eba96f03573aaf49408

--- a/js/src/old-configure.in
+++ b/js/src/old-configure.in
@@ -12770,106 +12770,42 @@ dnl
 =
 =
 =
-MOZ_ARG_ENABLE_STRING
-(
-optimize
-[
--
--
-disable
--
-optimize
-Disable
-compiler
-optimization
--
--
-enable
--
-optimize
-=
-[
-OPT
-]
-Specify
-compiler
-optimization
-flags
-[
-OPT
-=
--
-O
-]
-]
-[
+#
+Use
+value
+from
+moz
+.
+configure
 if
-test
-"
-enableval
-"
-!
-=
-"
-no
-"
-;
-then
-MOZ_OPTIMIZE
-=
-1
+one
+is
+defined
+.
+Else
+use
+our
+computed
+#
+value
+.
 if
 test
 -
 n
 "
-enableval
-"
--
-a
-"
-enableval
-"
-!
-=
-"
-yes
+{
+MOZ_CONFIGURE_OPTIMIZE_FLAGS
+}
 "
 ;
 then
 MOZ_OPTIMIZE_FLAGS
 =
-echo
-"
-enableval
-"
-|
-sed
--
-e
-'
-s
-|
-\
-\
-\
-|
-|
-g
-'
-MOZ_OPTIMIZE
-=
-2
+{
+MOZ_CONFIGURE_OPTIMIZE_FLAGS
+}
 fi
-else
-MOZ_OPTIMIZE
-=
-fi
-]
-MOZ_OPTIMIZE
-=
-1
-)
 MOZ_SET_FRAMEPTR_FLAGS
 if
 test
@@ -12972,10 +12908,6 @@ fi
 fi
 #
 COMPILE_ENVIRONMENT
-AC_SUBST
-(
-MOZ_OPTIMIZE
-)
 AC_SUBST
 (
 MOZ_FRAMEPTR_FLAGS
