--- a/old-configure.in
+++ b/old-configure.in
@@ -32427,106 +32427,42 @@ dnl
 =
 =
 =
-MOZ_ARG_ENABLE_STRING
-(
-optimize
-[
--
--
-disable
--
-optimize
-Disable
-compiler
-optimization
--
--
-enable
--
-optimize
-=
-[
-OPT
-]
-Specify
-compiler
-optimization
-flags
-[
-OPT
-=
--
-O
-]
-]
-[
+#
+Use
+value
+from
+moz
+.
+configure
 if
-test
-"
-enableval
-"
-!
-=
-"
-no
-"
-;
-then
-MOZ_OPTIMIZE
-=
-1
+one
+is
+defined
+.
+Else
+use
+our
+computed
+#
+value
+.
 if
 test
 -
 n
 "
-enableval
-"
--
-a
-"
-enableval
-"
-!
-=
-"
-yes
+{
+MOZ_CONFIGURE_OPTIMIZE_FLAGS
+}
 "
 ;
 then
 MOZ_OPTIMIZE_FLAGS
 =
-echo
-"
-enableval
-"
-|
-sed
--
-e
-'
-s
-|
-\
-\
-\
-|
-|
-g
-'
-MOZ_OPTIMIZE
-=
-2
+{
+MOZ_CONFIGURE_OPTIMIZE_FLAGS
+}
 fi
-else
-MOZ_OPTIMIZE
-=
-fi
-]
-MOZ_OPTIMIZE
-=
-1
-)
 MOZ_SET_FRAMEPTR_FLAGS
 if
 test
@@ -32633,10 +32569,6 @@ fi
 fi
 #
 COMPILE_ENVIRONMENT
-AC_SUBST
-(
-MOZ_OPTIMIZE
-)
 AC_SUBST
 (
 MOZ_FRAMEPTR_FLAGS
