Bug 1362187 - mathml.doc_count scalar telemetry - r=francois,tjr
Every time a document is destroyed, we record whether MathML was enabled,
which is set to true when a MathML element was bound to the document.
'mathml.doc_count' will report how many such documents existed during a
session. It should be compared to MIXED_CONTENT_PAGE_LOAD, which counts the total number of all page loads.

MozReview-Commit-ID: Euf1apT2LhC

UltraBlame original commit: 43ee744b0a2dccebefc31cdc19d5e6394012f6c5

--- a/toolkit/components/telemetry/Scalars.yaml
+++ b/toolkit/components/telemetry/Scalars.yaml
@@ -3492,6 +3492,53 @@ main
 '
 content
 '
+mathml
+:
+doc_count
+:
+bug_numbers
+:
+-
+1362187
+description
+:
+>
+The
+number
+of
+documents
+that
+contained
+enabled
+MathML
+elements
+.
+expires
+:
+"
+63
+"
+kind
+:
+uint
+notification_emails
+:
+-
+gsquelart
+mozilla
+.
+com
+release_channel_collection
+:
+opt
+-
+in
+record_in_processes
+:
+-
+'
+content
+'
 mediarecorder
 :
 recording_count
