--- a/servo/components/metrics/Cargo.toml
+++ b/servo/components/metrics/Cargo.toml
@@ -97,6 +97,30 @@ log
 .
 5
 "
+malloc_size_of
+=
+{
+path
+=
+"
+.
+.
+/
+malloc_size_of
+"
+}
+malloc_size_of_derive
+=
+{
+path
+=
+"
+.
+.
+/
+malloc_size_of_derive
+"
+}
 msg
 =
 {
@@ -145,3 +169,10 @@ path
 config
 "
 }
+time
+=
+"
+0
+.
+1
+"
